[project]
name = "flask-migratepg"
version = "1.0.1"
authors = [
  { name="Damien Bezborodov", email="dbezborodov@gmail.com" },
]
description = "Simple migration command for Flask and Psycopg 3."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Framework :: Flask",
]

[project.urls]
"Homepage" = "https://github.com/bezborodow/flask-migratepg"
"Bug Tracker" = "https://github.com/bezborodow/flask-migratepg/issues"
